# hf-tracker

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: track.yml
data/huggingface/: latest.json
data/huggingface/2026-06-23/: datasets.json  digest.json  models.json  spaces.json
tracker/: __init__.py  cli.py  config.py  conversations.py  discuss.py  enrich.py  llm.py  models.py  pipeline.py  report.py  schedule.py  scoring.py  state.py  storage.py
tracker/sinks/: __init__.py  base.py  console.py  email.py  feishu.py  telegram.py
tracker/sources/: __init__.py  base.py  huggingface.py
