[project]
name = "hf-tracker"
version = "0.1.0"
description = "可扩展的 HuggingFace 新模型/项目追踪服务：定时采集、归一化落盘、价值过滤、推送与 AI 报告"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.25",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.40",
]

[project.scripts]
hf-tracker = "tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracker"]
